Admin configuration coompleted

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=pharmaconnect-service
+
+
+server.port=8082
+
+spring.data.mongodb.database=pharmaconnect_db
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+
+spring.security.user.name=user
+spring.security.user.password=e084fdb5-2b8b-4042-bef6-6cffffab4fd7
